--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,7 +4,7 @@
 		<div class="footer-btm py-4 mt-5 ">
 			<div class="row align-items-center justify-content-between">
 				<div class="copyright">
-					Copyright &copy; 2023
+					Copyright &copy; 2023 Help4Life
 				</div>
 			</div>
 
