--- a/templates/signup.html
+++ b/templates/signup.html
@@ -9,6 +9,7 @@ SignUp
 
 {% block body %}
 {% include "partials/navbar.html" %}
+{% include "partials/messaging_info.html" %}
 <section>
     <form id="donor-registration-form" method="post" enctype="multipart/form-data" action="{% url 'signup' %}">
         {% csrf_token %}
@@ -20,13 +21,6 @@ SignUp
                     <div class="card">
                         <div class="secondary-bg text-md text-white text-center">Signup</div>
                         <div class="card-body">
-                            {% if messages %}
-                            <ul class="messages">
-                                {% for message in messages %}
-                                <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-                                    {% endfor %}
-                            </ul>
-                            {% endif %}
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label for="fname">First Name</label>
