--- a/templates/about.html
+++ b/templates/about.html
@@ -9,19 +9,6 @@ ABOUT
 
 {% block body %}
 {% include "partials/navbar.html" %}
-<section class="page-title bg-1">
-    <div class="overlay"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="block text-center">
-                    <span class="text-white">About Us</span>
-                    <h1 class="text-capitalize mb-5 text-lg">About Us</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 <section class="section about-page">
     <div class="container">
@@ -39,7 +26,7 @@ ABOUT
 </section>
 
 
-<section class="fetaure-page">
+<!-- <section class="fetaure-page">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6">
@@ -215,7 +202,7 @@ ABOUT
             </div>
         </div>
     </div>
-</section>
+</section> -->
 {% include "partials/footer.html" %}
 {% endblock body %}
 
