--- a/templates/signup.html
+++ b/templates/signup.html
@@ -13,26 +13,14 @@ SignUp
 <section>
     <form id="donor-registration-form" method="post" enctype="multipart/form-data" action="{% url 'signup' %}">
         {% csrf_token %}
-        {{ form.non_field_errors }} <!-- Display non-field errors if any -->
-        {{ form.errors }} <!-- Display form-level errors if any -->
+        {{ form.non_field_errors }} 
+        {{ form.errors }} 
         <div class="container mt-5">
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <div class="card">
                         <div class="secondary-bg text-md text-white text-center">Signup</div>
                         <div class="card-body">
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <label for="fname">First Name</label>
-                                    <input name="fname" id="fname" type="text" class="form-control">
-                                </div>
-                            </div>
-                            <div class="col-lg-12">
-                                <div class="form-group">
-                                    <label for="lname">Last Name</label>
-                                    <input name="lname" id="lname" type="text" class="form-control">
-                                </div>
-                            </div>
                             <div class="col-lg-12">
                                 <div class="form-group">
                                     <label for="email">Email</label>
