--- a/templates/about.html
+++ b/templates/about.html
@@ -8,7 +8,6 @@ ABOUT
 {% endblock css %}
 
 {% block body %}
-{% include "partials/navbar.html" %}
 
 <section class="section about-page">
     <div class="container">
@@ -26,7 +25,7 @@ ABOUT
 </section>
 
 
-<!-- <section class="fetaure-page">
+<section class="fetaure-page">
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6">
@@ -61,7 +60,7 @@ ABOUT
     </div>
 </section>
 
-<section class="section awards">
+<!-- <section class="section awards">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-lg-4">
@@ -203,8 +202,6 @@ ABOUT
         </div>
     </div>
 </section> -->
-{% include "partials/footer.html" %}
 {% endblock body %}
-
 {% block scripts %}
 {% endblock scripts %}
