--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,6 @@ CONTACT
 {% endblock css %}
 
 {% block body %}
-{% include "partials/navbar.html" %}
 <!-- contact form start -->
 
 <section class="section contact-info pb-0">
@@ -53,8 +52,8 @@ CONTACT
     </div>
     <div class="row">
       <div class="col-lg-12 col-md-12 col-sm-12">
-        <form id="contact-form" class="contact__form " method="post" action="mail.php">
-          <!-- form message -->
+        <form id="contact-form" class="contact__form " method="post" action="{% url 'contact' %}">
+          {% csrf_token %}
           <div class="row">
             <div class="col-12">
               <div class="alert alert-success contact__msg" style="display: none" role="alert">
@@ -66,33 +65,29 @@ CONTACT
           <div class="row">
             <div class="col-lg-6">
               <div class="form-group">
-                <input name="name" id="name" type="text" class="form-control" placeholder="Your Full Name">
+                {{ form.name }}
               </div>
             </div>
 
             <div class="col-lg-6">
               <div class="form-group">
-                <input name="email" id="email" type="email" class="form-control" placeholder="Your Email Address"
-                  required>
+                {{ form.email }}
               </div>
             </div>
             <div class="col-lg-6">
               <div class="form-group">
-                <input name="subject" id="subject" type="text" class="form-control" placeholder="Your Query Topic"
-                  required>
+                {{ form.subject }}
               </div>
             </div>
             <div class="col-lg-6">
               <div class="form-group">
-                <input name="phone" id="phone" type="text" class="form-control" placeholder="Your Phone Number"
-                  required>
+                {{ form.phone }}
               </div>
             </div>
           </div>
 
           <div class="form-group-2 mb-4">
-            <textarea name="message" id="message" class="form-control" rows="8" placeholder="Your Message"
-              required></textarea>
+            {{ form.message }}
           </div>
 
           <div>
@@ -104,7 +99,6 @@ CONTACT
   </div>
 </section>
 
-{% include "partials/footer.html" %}
 {% endblock body %}
 
 {% block scripts %}
