--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@ HOME
         <div class="row">
             <div class="col-lg-6 col-md-12 col-xl-7">
                 <div class="block">
-                    <div class="divider mb-3"></div>
-                    <span class="text-uppercase text-sm letter-spacing">Donate Blood, Save Lives</span>
+                    <!-- <div class="divider mb-3"></div> -->
+                    <!-- <span class="text-uppercase text-sm letter-spacing">Donate Blood, Save Lives</span> -->
                     <h1 class="mb-3 mt-3">Be a Lifesaver - Donate Blood Today</h1>
 
                     <p class="mb-4 pr-5">Your blood donation can make a significant difference. Join us in our mission
@@ -45,7 +45,7 @@ HOME
                         <h4 class="mb-3">Be a Lifesaver</h4>
                         <p class="mb-4">Your blood donation can save lives. Join us in our mission to provide
                             life-saving blood to those in need.</p>
-                        <a href="{% url 'register' %}" class="btn btn-main btn-round-full">Donate Now</a>
+                        <a href="{% url 'register' %}" class="btn btn-main btn-round-full">Register Now</a>
                     </div>
 
                     <div class="feature-item mb-5 mb-lg-0">
@@ -59,21 +59,16 @@ HOME
                         <a href="{% url 'donorlist' %}" class="btn btn-main btn-round-full">View Donor List</a>
                     </div>
 
-
                     <div class="feature-item mb-5 mb-lg-0">
                         <div class="feature-icon mb-4">
-                            <i style="color: #e12454 !important;" class="icofont-ui-clock"></i>
+                            <i style="color: #e12454 !important;" class="icofont-heartbeat"></i>
                         </div>
-                        <span>Working Hours</span>
-                        <h4 class="mb-3">Center Hours</h4>
-                        <p class="mb-4">Our center operates during the following hours. Visit us during these times to
-                            donate blood or get more information.</p>
-                        <ul class="w-hours list-unstyled">
-                            <li class="d-flex justify-content-between">Mon - Fri : <span>8:00 AM - 6:00 PM</span></li>
-                            <li class="d-flex justify-content-between">Sat : <span>9:00 AM - 4:00 PM</span></li>
-                            <li class="d-flex justify-content-between">Sun : <span>Closed</span></li>
-                        </ul>
+                        <span>Health Tips</span>
+                        <h4 class="mb-3">Stay Healthy, Save Lives</h4>
+                        <p class="mb-4">In addition to donating blood, taking care of your health is crucial. Explore our health tips and information to ensure you stay healthy and continue making a positive impact on others' lives.</p>
+                        <a href="{% url 'healthtips' %}" class="btn btn-main btn-round-full">Explore Health Tips</a>
                     </div>
+                    
                 </div>
             </div>
         </div>
