--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -4,7 +4,8 @@
 		<div class="footer-btm py-4 mt-5 ">
 			<div class="row align-items-center justify-content-between">
 				<div class="copyright">
-					Copyright &copy; 2023 Help4Life
+					Copyright &copy; 2023 <span class="h6 read-more">AlAzizDonors</span> 
+					All rights reserved.
 				</div>
 			</div>
 
