--- a/templates/partials/index.html
+++ b/templates/partials/index.html
@@ -8,21 +8,21 @@
   <!-- Basic Page Needs
   ================================================== -->
   <meta charset="utf-8">
-  <title> Help4Life - {% block title %} {% endblock title %}</title>
+  <title> AlAzizDonors - {% block title %} {% endblock title %}</title>
 
   <!-- Mobile Specific Metas
   ================================================== -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="blood donor">
+  <meta name="description" content="blood donation">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="help4life">
-  <meta name="generator" content="help4life">
+  <meta name="author" content="alazizdonors">
+  <meta name="generator" content="alazizdonors">
 
   <!-- theme meta -->
-  <meta name="theme-name" content="help4life" />
+  <meta name="theme-name" content="alazizdonors" />
 
   <!-- Favicon -->
-  <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/images/favicon.png' %}" />
+  <link rel="shortcut icon" type="image/x-icon" href="{% static 'assets/images/favic.png' %}" />
 
   <!-- 
   Essential stylesheets
