--- a/templates/confirmation.html
+++ b/templates/confirmation.html
@@ -15,8 +15,8 @@ Login
 		<div class="col-lg-8">
 			<div class="confirmation-content text-center">
 			  <i class="icofont-check-circled text-lg text-color-2"></i>
-				<h2 class="mt-3 mb-4">Thank you for registering as a Blood Donor</h2>
-				<p>Your generosity will make a difference in saving lives.</p>
+				<h2 class="mt-3 mb-4">Thank you for registering!</h2>
+				<p>Please check your email and follow the instructions to verify your account.</p>
 			</div>
 		</div>
 	  </div>
